Create a base-proto-pom to capture all parent concerns

--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -46,7 +46,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--LIBRARY-->
+            <!-- governance-libraries -->
             <dependency>
                 <groupId>com.github.frtu.governance</groupId>
                 <artifactId>library-dot</artifactId>
