--- a/ext-protobuf/pom.xml
+++ b/ext-protobuf/pom.xml
@@ -15,6 +15,7 @@
     <description>Base project for Protobuf extension for governance toolbox</description>
 
     <modules>
+        <module>base-proto-pom</module>
         <module>library-proto-meta</module>
     </modules>
 
@@ -22,8 +23,8 @@
         <java.version>1.8</java.version>
         <!--===========================-->
         <!--https://github.com/protocolbuffers/protobuf/tree/v3.11.0/java-->
-        <protobuf.version>3.11.0</protobuf.version>
-        <protoc.version>${protobuf.version}</protoc.version>
+        <!--<protobuf.version>3.11.0</protobuf.version>-->
+        <!--<protoc.version>${protobuf.version}</protoc.version>-->
         <!--===========================-->
     </properties>
     <dependencies>
@@ -56,13 +57,6 @@
         </dependency>
     </dependencies>
     <build>
-        <extensions>
-            <extension>
-                <groupId>kr.motd.maven</groupId>
-                <artifactId>os-maven-plugin</artifactId>
-                <version>1.6.2</version>
-            </extension>
-        </extensions>
         <plugins>
             <!-- JDK version -->
             <plugin>
@@ -115,37 +109,13 @@
                 </executions>
             </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.xolstice.maven.plugins</groupId>
-                    <artifactId>protobuf-maven-plugin</artifactId>
-                    <version>0.6.1</version>
-                    <configuration>
-                        <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
     <dependencyManagement>
         <dependencies>
-            <!--Java client-->
-            <dependency>
-                <groupId>com.google.protobuf</groupId>
-                <artifactId>protobuf-java</artifactId>
-                <version>${protobuf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.protobuf</groupId>
-                <artifactId>protobuf-java-util</artifactId>
-                <version>${protobuf.version}</version>
-            </dependency>
-
             <!--Internal domain dependencies -->
             <dependency>
-                <groupId>com.github.frtu.archetype</groupId>
-                <artifactId>base-pom</artifactId>
+                <groupId>com.github.frtu.governance</groupId>
+                <artifactId>base-proto-pom</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
