Add proto archetype

--- a/ext-protobuf/pom.xml
+++ b/ext-protobuf/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>base-proto-pom</module>
         <module>library-proto-meta</module>
+        <module>archetype-proto-project</module>
     </modules>
 
     <properties>
