Add usage for SecuredFieldHelper

--- a/ext-protobuf/archetype-proto-project/src/main/resources/archetype-resources/pom.xml
+++ b/ext-protobuf/archetype-proto-project/src/main/resources/archetype-resources/pom.xml
@@ -23,6 +23,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.frtu.governance</groupId>
+            <artifactId>library-proto-meta</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
         </dependency>
