Create an base-avro-pom

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<module>libraries</module>
 		<module>maven-plugins</module>
 		<module>samples/schema-maven-usage</module>
-        <module>ext-protobuf</module>
+		<module>ext-avro</module>
+		<module>ext-protobuf</module>
     </modules>
 
 	<licenses>
