--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -19,7 +19,7 @@
 
 	<modules>
 		<module>base-pom</module>
-		<module>avro-project</module>
+		<!--<module>avro-project</module>-->
 		<module>plt-kafka-project</module>
 		<module>plt-spark-project</module>
 	</modules>
