--- a/ext-avro/pom.xml
+++ b/ext-avro/pom.xml
@@ -16,12 +16,13 @@
 
     <modules>
         <module>base-avro-pom</module>
+        <module>archetype-avro-project</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <!--===========================-->
-        <!--<avro.version>1.8.2</avro.version>-->
+        <!--<avro.version>1.9.1</avro.version>-->
         <!--===========================-->
     </properties>
     <dependencies>
