--- a/libraries/library-spring-reflection/pom.xml
+++ b/libraries/library-spring-reflection/pom.xml
@@ -51,5 +51,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
