--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -35,7 +35,8 @@
         <spring.version>5.1.5.RELEASE</spring.version>
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
         <!--=========================== -->
-        <reflections.version>0.9.11</reflections.version>
+        <!--https://github.com/ronmamo/reflections : >0.9.12 migrate to jdk8-->
+        <reflections.version>0.9.12</reflections.version>
         <avro.version>1.8.2</avro.version>
         <jackson.version>2.9.8</jackson.version>
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
