--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -41,7 +41,7 @@
         <jackson.version>2.9.8</jackson.version>
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
         <!--===========================-->
-        <frtu.lib.version>1.0.2</frtu.lib.version>
+        <frtu.lib.version>1.0.3-SNAPSHOT</frtu.lib.version>
         <frtu.simple-scan.version>0.2.0</frtu.simple-scan.version>
     </properties>
 
