--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
@@ -21,10 +22,12 @@
         <!--=========================== -->
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <junit.version>4.12</junit.version>
+        <junit5.version>5.6.0</junit5.version>
+        <junit4.version>4.12</junit4.version>
         <powermock.version>1.6.2</powermock.version>
         <easymock.version>3.2</easymock.version>
         <!--=========================== -->
+        <lombok.version>1.18.12</lombok.version>
         <guava.version>28.1-jre</guava.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
@@ -42,6 +45,7 @@
         <jackson-binding.version>${jackson.version}</jackson-binding.version>
         <!--===========================-->
         <frtu.lib.version>1.0.3-SNAPSHOT</frtu.lib.version>
+        <frtu.logger-core.version>1.0.1</frtu.logger-core.version>
         <frtu.simple-scan.version>0.2.0</frtu.simple-scan.version>
     </properties>
 
@@ -69,6 +73,12 @@
                 <artifactId>library-utils</artifactId>
                 <version>${frtu.lib.version}</version>
             </dependency>
+            <!-- Log framework -->
+            <dependency>
+                <groupId>com.github.frtu.logs</groupId>
+                <artifactId>logger-core</artifactId>
+                <version>${frtu.logger-core.version}</version>
+            </dependency>
             <!-- Directory scanner -->
             <dependency>
                 <groupId>com.github.frtu.simple</groupId>
@@ -77,6 +87,11 @@
             </dependency>
 
             <!-- Common libs -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -197,9 +212,15 @@
             <!-- TEST -->
             <!--===========================-->
             <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit5.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <version>${junit4.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -224,6 +245,16 @@
     </dependencyManagement>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
