--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -19,6 +19,7 @@
 
 	<modules>
 		<module>base-pom</module>
+		<module>base-project</module>
 		<!--<module>avro-project</module>-->
 		<!--<module>plt-kafka-project</module>-->
 		<!--<module>plt-spark-project</module>-->
