--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<modules>
 		<module>archetype</module>
-		<module>libraries</module>
+		<!--<module>libraries</module>-->
 		<!--<module>maven-plugins</module>-->
 		<!--<module>samples/schema-maven-usage</module>-->
 		<!--<module>ext-avro</module>-->
