--- a/archetype/base-project/pom.xml
+++ b/archetype/base-project/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.archetype</groupId>
         <artifactId>archetype-pom</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${governance-libraries.version}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
