--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.github.frtu.governance</groupId>
 	<artifactId>master-pom</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>${governance-libraries.version}</version>
 	<packaging>pom</packaging>
 
 	<name>Governance toolbox</name>
@@ -64,6 +64,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<!--=========================== -->
 		<lombok.version>1.18.10</lombok.version>
+		<!--=========================== -->
+		<governance-libraries.version>1.0.4-SNAPSHOT</governance-libraries.version>
 	</properties>
 
 	<dependencyManagement>
