Create project structure for generating graphql project based on https://github.com/graphql-java-generator/graphql-maven-plugin-project

--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>base-pom</module>
 		<module>base-project</module>
+		<module>plt-graphql-project</module>
 		<!--<module>avro-project</module>-->
 		<!--<module>plt-kafka-project</module>-->
 		<!--<module>plt-spark-project</module>-->
