Reactivate libraries & bump version to the right one

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
 	<modules>
 		<module>archetype</module>
-		<!--<module>libraries</module>-->
+		<module>libraries</module>
 		<!--<module>maven-plugins</module>-->
-		<!--<module>samples/schema-maven-usage</module>-->
+		<module>samples/schema-maven-usage</module>
 		<!--<module>ext-avro</module>-->
 		<!--<module>ext-protobuf</module>-->
     </modules>
