--- a/libraries/library-dot/pom.xml
+++ b/libraries/library-dot/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>libraries-pom</artifactId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>${governance-libraries.version}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
