--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>master-pom</artifactId>
-        <version>${frtu-governance.version}</version>
+        <version>1.0.5-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
