--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -25,6 +25,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <base-pom.version>1.1.0</base-pom.version>
         <!--===========================-->
         <avro.version>1.8.2</avro.version>
         <!--===========================-->
@@ -50,7 +51,7 @@
             <dependency>
                 <groupId>com.github.frtu.archetype</groupId>
                 <artifactId>base-pom</artifactId>
-                <version>${project.version}</version>
+                <version>${base-pom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -62,7 +63,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -72,7 +72,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.0-M1</version>
                 <configuration>
                     <author>Frederic TU</author>
                     <encoding>${project.build.sourceEncoding}</encoding>
