--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <module>maven-plugins</module>
         <module>samples/schema-maven-usage</module>
         <module>ext-avro</module>
-        <!--<module>ext-protobuf</module>-->
+        <module>ext-protobuf</module>
     </modules>
 
     <licenses>
