--- a/ext-avro/base-avro-pom/pom.xml
+++ b/ext-avro/base-avro-pom/pom.xml
@@ -9,6 +9,7 @@
 
     <groupId>com.github.frtu.governance</groupId>
     <artifactId>base-avro-pom</artifactId>
+    <version>1.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Base Parent pom extension for Avro</name>
