--- a/ext-protobuf/base-proto-pom/pom.xml
+++ b/ext-protobuf/base-proto-pom/pom.xml
@@ -8,6 +8,7 @@
 
     <groupId>com.github.frtu.governance</groupId>
     <artifactId>base-proto-pom</artifactId>
+    <version>1.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Base Parent pom extension for Protobuf</name>
