--- a/ext-protobuf/library-proto-meta/pom.xml
+++ b/ext-protobuf/library-proto-meta/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.frtu.governance</groupId>
-        <artifactId>ext-protobuf-pom</artifactId>
+        <artifactId>base-proto-pom</artifactId>
         <version>1.0.6-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../base-proto-pom/pom.xml</relativePath>
     </parent>
 
     <artifactId>library-proto-meta</artifactId>
@@ -15,9 +15,6 @@
 
     <properties>
         <protobuf.source.dir>${project.basedir}/src/main/proto/</protobuf.source.dir>
-        <!--===========================-->
-        <!--https://github.com/protocolbuffers/protobuf/tree/v3.11.0/java-->
-        <protobuf.version>3.11.0</protobuf.version>
     </properties>
 
     <dependencies>
@@ -31,21 +28,6 @@
             <artifactId>protobuf-java-util</artifactId>
         </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <!-- Protobuf -->
-            <dependency>
-                <groupId>com.google.protobuf</groupId>
-                <artifactId>protobuf-java</artifactId>
-                <version>${protobuf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.protobuf</groupId>
-                <artifactId>protobuf-java-util</artifactId>
-                <version>${protobuf.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <!-- Include core protos in the bundle as resources -->
