--- a/ext-protobuf/library-proto-meta/pom.xml
+++ b/ext-protobuf/library-proto-meta/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>base-proto-pom</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../base-proto-pom/pom.xml</relativePath>
     </parent>
 
@@ -26,6 +26,26 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
+        </dependency>
+
+        <!-- JUnit 4 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--===========================-->
+        <!-- Platform - Lombok and Logback -->
+        <!--===========================-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.github.frtu.logs</groupId>
+            <artifactId>logger-core</artifactId>
         </dependency>
     </dependencies>
 
