--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -47,6 +47,20 @@
     </dependencyManagement>
     <build>
         <plugins>
+            <!-- Finding bugs - http://findbugs.sourceforge.net/bugDescriptions.html -->
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>spotbugs</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- JDK version -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
