--- a/ext-avro/plt-kafka-project/pom.xml
+++ b/ext-avro/plt-kafka-project/pom.xml
@@ -7,6 +7,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <groupId>com.github.frtu.archetype</groupId>
     <artifactId>plt-kafka-project-archetype</artifactId>
     <packaging>jar</packaging>
 
