--- a/ext-avro/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/ext-avro/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.frtu.archetype</groupId>
-        <artifactId>base-pom</artifactId>
-        <version>${base-pom-version}</version>
+        <groupId>com.github.frtu.governance</groupId>
+        <artifactId>base-avro-pom</artifactId>
+        <version>${frtu-governance-version}</version>
     </parent>
 
     <groupId>${groupId}</groupId>
@@ -47,13 +47,13 @@
         <!--<spring-kafka.version>2.2.4.RELEASE</spring-kafka.version>-->
 
         <!--libraries-->
-        <frtu.lib.version>${base-pom-version}</frtu.lib.version>
+        <frtu.lib.version>${frtu-governance-version}</frtu.lib.version>
+        <frtu.governance.version>${frtu-governance-version}</frtu.governance.version>
 
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <confluent.version>5.0.0</confluent.version>
         <!--https://github.com/frtu/governance-toolbox#hortonworks-schema-registry-->
-        <governance-maven-plugin.version>${base-pom-version}</governance-maven-plugin.version>
     </properties>
 
     <repositories>
@@ -265,7 +265,7 @@
                 <plugin>
                     <groupId>com.github.frtu.governance</groupId>
                     <artifactId>schema-registries-maven-plugin</artifactId>
-                    <version>${governance-maven-plugin.version}</version>
+                    <version>${frtu.governance.version}</version>
                 </plugin>
                 <!--===========================-->
                 <!-- CONFLUENT SCHEMA REGISTRY-->
